--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python,venv,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,venv,visualstudiocode
 *.DS_Store
-CuttingInput.py
+CuttingInput*.py
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
